--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ul>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img.jpg"
+              src="./images/img.jpg"
               alt="Foto Mark Guerrero"
               width="264"
               height="260"
@@ -72,7 +72,7 @@
           </li>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Foto Tom Ford"
               width="264"
               height="260"
@@ -82,7 +82,7 @@
           </li>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Foto Camila Garcia"
               width="264"
               height="260"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="Foto Daniel Wilson"
               width="264"
               height="260"
